# advanced_ba_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: linting.yaml  tests.yaml
API/: Advanced_ba_API_notebook.ipynb
API/retrieved_data/: area_007_2009_20090622.tif  area_007_2012_20120628.tif  area_007_2016_20160630.tif  area_007_2020_20200626.tif  area_007_2022_20220810.tif  area_015_2009_20090622.tif  area_015_2012_20120628.tif  area_015_2016_20160630.tif  area_015_2020_20200626.tif  area_015_2022_20220810.tif  area_077_2012_20120628.tif  area_077_2016_20160630.tif  area_077_2020_20200626.tif  area_077_2022_20220810.tif  area_092_2009_20090622.tif  area_092_2012_20120628.tif  area_092_2016_20160630.tif  area_092_2020_20200626.tif  area_092_2022_20220810.tif
configs/: config.yaml  sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
hpc_runs/: train.sh
notebooks/: Advanced_ba_API_notebook.ipynb  Advanced_ba_API_notebook.ipynb.ipynb  Explainer_Notebook.ipynb  baseline_notebook.ipynb
src/advanced_ba_project/: baseline.py  data.py  model.py  sweep.py  sweep_train.py  train.py  visualize.py  visualize_api.py
tests/: test_data.py  test_model.py
