[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced_ba_project"
version = "0.0.1"
description = "DTU Advanced Business Analytics course project"
authors = [{ name = "DAKRIFEKA", email = "your@email.com" }]
license = { text = "MIT" }  # Add the appropriate license
readme = "README.md"
requires-python = ">=3.11"

keywords = ["machine learning", "MLOps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch",
    "torchvision",
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit"
]

[tool.setuptools]
packages = ["advanced_ba_project"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]

[tool.coverage.run]
source = ["advanced_ba_project"]
omit = [
    "tests/*",
    "*/_remote_module_non_scriptable.py",
    "*/site-packages/*"
]
